--- a/css/normalize.css
+++ b/css/normalize.css
@@ -7,8 +7,8 @@
 }
 
 /* Прибираємо внутрішні відступи списків */
-ul[class="reset"],
-ol[class="reset"] {
+ul[class],
+ol[class] {
   padding: 0;
 }
 
@@ -19,8 +19,8 @@ h2,
 h3,
 h4,
 p,
-ul[class="reset"],
-ol[class="reset"],
+ul[class],
+ol[class],
 li,
 figure,
 figcaption,
@@ -38,9 +38,9 @@ body {
   line-height: 1.5;
 }
 
-/* Видаляємо стандартну стилізацію для усіх ul/il, з класом reset*/
-ul[class="reset"],
-ol[class="reset"] {
+/* Видаляємо стандартну стилізацію для усіх ul/il з класом*/
+ul[class],
+ol[class] {
   list-style: none;
 }
 
