--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,14 @@ body {
   color: #434455; /*slate*/
   letter-spacing: 0.02em;
 }
+.container {
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+.flex {
+  display: flex;
+}
 /*fonts*/
 .logo {
   font-family: "Raleway";
@@ -12,6 +20,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-decoration: none;
+  margin-right: 76px;
 }
 .header-1 {
   font-weight: 700;
@@ -118,30 +127,6 @@ body {
   border: 0;
   color: #ffffff;
 }
-/*nav links*/
-.my-link {
-  /*padding: 24px 0; - проблема посилань у цьому педдінгу, який поки що не потрібен. Але ж я робив суто по ТЗ (критерії
-  прийняття. Сказано "зробити по стиль-гайду" я ж і зробив :) в рузультаті при наведенні на портфоліо ховер отримумвали
-  контакти, у яких посилання поки порожнє
-  а nav-link буде потрібен потім для позиціонування, це я недовидалив, бо спочатку аж у флєкси вліз в цьому ДЗ */
-  color: #2e2f42;
-  text-decoration: none;
-}
-.my-link:focus,
-.my-link:hover,
-.my-link:active {
-  color: #404bbf;
-  border-bottom: 4px solid #404bbf;
-}
-.address-link {
-  text-decoration: none;
-  font-style: normal;
-}
-.address-link:focus,
-.address-link:hover,
-.address-link:active {
-  color: #404bbf;
-}
 /*background colors*/
 .bg-iris {
   background-color: #4d5ae5;
@@ -175,15 +160,114 @@ body {
   background-color: #2e2f42;
   opacity: 0.7;
 }
-
+.bg-snow {
+  background-color: #ffffff;
+}
 /*bloks*/
-.hero {
-  background-color: #2e2f42; /*navy blue*/
-}
-.our-team {
-  background-color: #f4f4fd; /*cloud*/
-}
 
+/*header*/
+header {
+  border-bottom: 1px solid #e7e9fc;
+}
+.my-heder {
+  align-items: center;
+  justify-content: space-between;
+  height: 72px;
+}
+.my-nav {
+  align-items: center;
+}
+.my-links > li:not(:last-child) {
+  margin-right: 40px;
+}
+.my-link {
+  padding: 24px 0;
+  color: #2e2f42;
+  text-decoration: none;
+}
+.my-link:focus,
+.my-link:hover,
+.my-link:active {
+  color: #404bbf;
+  border-bottom: 4px solid #404bbf;
+}
+.my-address > li:not(:first-child) {
+  margin-left: 40px;
+}
+.address-link {
+  text-decoration: none;
+  font-style: normal;
+}
+.address-link:focus,
+.address-link:hover,
+.address-link:active {
+  color: #404bbf;
+}
+/*hero*/
+.my-hero {
+  height: 600px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.my-hero-text {
+  width: 494px;
+  margin-bottom: 48px;
+  text-align: center;
+}
+/*advantages*/
+.my-advantages {
+  padding: 120px 0;
+}
+.my-advantages h3 {
+  margin-bottom: 8px;
+}
+.my-advantages-list > li:not(:last-child) {
+  margin-right: 24px;
+}
+/*products*/
+.my-products {
+  text-align: center;
+  padding-bottom: 120px;
+}
+.my-products > h2 {
+  margin-bottom: 72px;
+}
+.my-products-list {
+  justify-content: space-between;
+}
+/*team*/
+.my-team {
+  text-align: center;
+  padding: 120px 0;
+}
+.my-team > h2 {
+  margin-bottom: 72px;
+}
+.my-team-list {
+  justify-content: space-between;
+}
+.my-team-card {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+}
+.my-team-card-caption {
+  padding: 32px 16px;
+}
+.my-team-card-caption > h3 {
+  margin-bottom: 8px;
+}
+/*footer*/
+.my-footer {
+  height: 310px;
+  flex-direction: column;
+  justify-content: center;
+}
+.my-footer-text {
+  width: 264px;
+  margin-top: 16px;
+}
 /*colors
 .iris {
     color: #4d5ae5;
@@ -215,4 +299,4 @@ body {
   .grey {
     color: #2e2f42;
   }
-*/
+*/ ;
