--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/***Загальні стилі всіх сторінок*/
 body {
   font-family: "Roboto", sans-serif;
   color: #434455; /*slate*/
@@ -8,14 +9,33 @@ body {
   padding: 0 15px;
   margin: 0 auto;
 }
-.flex {
-  display: flex;
-}
+/*видалив .flex і пододавав його до відповдних класів, дійсно перемудрив із ним*/
 .full-width {
   min-width: 1158px;
 }
-.hide {
-  display: none;
+.visually-hidden {
+  /*візуальне приховування елементів*/
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+/*сітки*/
+.my-advantages-list, /*подумав, що логічно всі ці блоки зробити сітками. Бо може потім додасться член команди, або вид діяльності тощо*/
+.my-products-list,
+.my-team-list,
+.my-portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 48px;
+  column-gap: 24px;
 }
 /*fonts*/
 .logo {
@@ -75,28 +95,28 @@ body {
 }
 /*font colors*/
 .iris {
-  color: #4d5ae5;
+  color: #4d5ae5; /*iris*/
 }
 .ocean {
-  color: #404bbf;
+  color: #404bbf; /*ocean*/
 }
 .navy-blue {
-  color: #2e2f42;
+  color: #2e2f42; /*navy-blue*/
 }
 .slate {
-  color: #434455;
+  color: #434455; /*slate*/
 }
 .light-slate {
-  color: #8e8f99;
+  color: #8e8f99; /*light-slate*/
 }
 .cornflower {
-  color: #e7e9fc;
+  color: #e7e9fc; /*cornflower*/
 }
 .cloud {
-  color: #f4f4fd;
+  color: #f4f4fd; /*cloud*/
 }
 .snow {
-  color: #ffffff;
+  color: #ffffff; /*snow*/
 }
 /*buttons*/
 .main-button {
@@ -130,60 +150,63 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-  border: 0;
+  border: 1px solid #404bbf; /*проблема була в нульовому бордері отут, тому залишив бордер, але перефарбував його в основнй колір кнопки*/
   color: #ffffff;
 }
 /*background colors*/
 .bg-iris {
-  background-color: #4d5ae5;
+  background-color: #4d5ae5; /*iris*/
 }
 .bg-ocean {
-  background-color: #404bbf;
+  background-color: #404bbf; /*ocean*/
 }
 .bg-navy-blue {
-  background-color: #2e2f42;
+  background-color: #2e2f42; /*navy-blue*/
 }
 .bg-green {
-  background-color: #31d0aa;
+  background-color: #31d0aa; /*green*/
 }
 .bg-slate {
-  background-color: #434455;
+  background-color: #434455; /*slate*/
 }
 .bg-light-slate {
-  background-color: #8e8f99;
+  background-color: #8e8f99; /*light-slate*/
 }
 .bg-cornflower {
-  background-color: #e7e9fc;
+  background-color: #e7e9fc; /*cornflower*/
 }
 .bg-cloud {
-  background-color: #f4f4fd;
+  background-color: #f4f4fd; /*cloud*/
 }
 .bg-navy-blue-modal {
-  background-color: #2e2f42;
+  background-color: #2e2f42; /*navy-blue-modal*/
   opacity: 0.4;
 }
 .bg-grey {
-  background-color: #2e2f42;
+  background-color: #2e2f42; /*grey*/
   opacity: 0.7;
 }
 .bg-snow {
-  background-color: #ffffff;
+  background-color: #ffffff; /*snow*/
 }
-/*bloks*/
-
 /*header*/
 header {
   border-bottom: 1px solid #e7e9fc;
 }
 .my-header {
+  display: flex;
   align-items: center;
   justify-content: space-between;
   height: 72px;
 }
 .my-nav {
+  display: flex;
   align-items: center;
 }
-.my-links > li:not(:last-child) {
+.my-link-list {
+  display: flex;
+}
+.my-link-item:not(:last-child) {
   margin-right: 40px;
 }
 .my-link {
@@ -197,21 +220,36 @@ header {
   color: #404bbf;
   border-bottom: 4px solid #404bbf;
 }
-.my-address > li:not(:first-child) {
+.my-address-list {
+  display: flex;
+}
+.my-address-item:not(:first-child) {
   margin-left: 40px;
 }
-.address-link {
+.my-address-link {
   text-decoration: none;
   font-style: normal;
 }
-.address-link:focus,
-.address-link:hover,
-.address-link:active {
+.my-address-link:focus,
+.my-address-link:hover,
+.my-address-link:active {
   color: #404bbf;
 }
+/*footer*/
+.my-footer {
+  padding: 100px 0;
+  flex-direction: column;
+  justify-content: center;
+}
+.my-footer-text {
+  width: 264px;
+  margin-top: 16px;
+}
+/**index.html**/
 /*hero*/
 .my-hero {
-  height: 600px;
+  height: 600px; /*а отут, логічно додати фіксовану висоту чи все ж теж паддінгами зробити?*/
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -228,8 +266,8 @@ header {
 .my-advantages h3 {
   margin-bottom: 8px;
 }
-.my-advantages-list > li:not(:last-child) {
-  margin-right: 24px;
+.my-advantages-item {
+  flex-basis: calc((100% - 72px) / 4);
 }
 /*products*/
 .my-products {
@@ -239,8 +277,8 @@ header {
 .my-products-title {
   margin-bottom: 72px;
 }
-.my-products-list {
-  justify-content: space-between;
+.my-products-item {
+  flex-basis: calc((100% - 48px) / 3);
 }
 /*team*/
 .my-team {
@@ -250,10 +288,8 @@ header {
 .my-team-title {
   margin-bottom: 72px;
 }
-.my-team-list {
-  justify-content: space-between;
-}
 .my-team-card {
+  flex-basis: calc((100% - 72px) / 4);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
@@ -264,22 +300,13 @@ header {
 .my-team-card-caption > h3 {
   margin-bottom: 8px;
 }
-/*footer*/
-.my-footer {
-  height: 310px;
-  flex-direction: column;
-  justify-content: center;
-}
-.my-footer-text {
-  width: 264px;
-  margin-top: 16px;
-}
 /**Portfolio.html*/
 /*filtres*/
 .my-filtres {
   padding-top: 96px;
 }
 .my-filtres-list {
+  display: flex;
   justify-content: center;
 }
 .my-filtres-item:not(:last-child) {
@@ -288,11 +315,6 @@ header {
 /*portfolio*/
 .my-portfolio {
   padding: 72px 0 120px;
-}
-.my-portfolio-list {
-  flex-wrap: wrap;
-  row-gap: 48px;
-  column-gap: 24px;
 }
 .my-portfolio-item {
   flex-basis: calc((100% - 48px) / 3);
